Incorporate the samlsign tool in to perform signature validation in parallel with metadatatool, when possible.  The exceptions are when processing pre-SAML format metadata, which samlsign does not have the ability to process.